fix: layout collapse on mobile

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -4,6 +4,7 @@ section.about {
   background-color: $base-color;
   color: white;
   padding: 20px;
+  min-width: $min-width;
 
   a {
     color: $primary-color;
