--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,10 +1,3 @@
-@media only screen and (orientation: portrait) {
-  body {
-    overflow: auto;
-    width: 100%;
-  }
-}
-
 .App {
   text-align: center;
 }
